--- a/CSS/index.css
+++ b/CSS/index.css
@@ -3,9 +3,18 @@ body{
     text-align: center;
 
 }
+div{
+     background-color: #E0FFFF;
+     text-align: center;
+     color: #FF8C00;
+     margin-bottom: 5%; 
+}
 h1{
+    margin: 5px;
+    font-size: 32px;
     color: #FF8C00;
 }
 h3{
     color:  #FF8C00
 }
+
