--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,20 +1,10 @@
-body{
-    background-color: #CAE1FF;
-    text-align: center;
+/*-----------------------------------------GERAIS--------------------------------------------*/
 
-}
-div{
-     background-color: #E0FFFF;
-     text-align: center;
-     color: #FF8C00;
-     margin-bottom: 5%; 
-}
-h1{
-    margin: 5px;
-    font-size: 32px;
-    color: #FF8C00;
-}
-h3{
-    color:  #FF8C00
-}
+/*-------------------------------------CONTEINERS---------------------------------------*/
+
+
+
+/*------------------------------------Identificaveis---------------------------------------------*/
+
+
 
