--- a/CSS/index.css
+++ b/CSS/index.css
@@ -9,6 +9,9 @@ li{
 a{
 	text-decoration: none;
 }
+header{
+	font-size: 20px;
+}
 .logo{
 	width: 100%;
 	height: 160px;
@@ -26,4 +29,21 @@ a{
 	display: grid;
 	justify-content: center;
 	align-content: center;
+	background-color: #8e51ff;
+}
+.menu ul{
+	display: grid;
+	grid-auto-flow: column;
+}
+.menu li{
+	width: 160px;
+	height: 20px;
+	display: grid;
+	justify-content: center;
+	align-content: center;
+}
+.menu a{
+	font-family: 'Permanent Marker', cursive;
+	font-size: 1em;
+	color: #00ffddd0;
 }
